# fast-api-auth-template

./: Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: deploy.yml  main.yml
alembic/: env.py
alembic/versions/: 118dca3c10f4_users_table.py  34b07fea0921_added_used_at_field_on_confirmations_.py  47336471de0a_connecting_user_type_table.py  497565841751_added_confirmations_table.py  ebcd523f594d_users_table_add.py
app/: db.py  main.py
app/auth/: crypto.py  dependencies.py  models.py  router.py  schemas.py  services.py
app/utils/: email.py
